code slider 2 slider changes spacing issue fixe form validation

--- a/src/app/HomeComponents/Accordian.css
+++ b/src/app/HomeComponents/Accordian.css
@@ -38,9 +38,9 @@ div#panel1-header {
 }
 
 }
-.Accoinian .css-1aj41gs {
+/* .Accoinian .css-1aj41gs {
     background-color: #fff0;
-}
+} */
 
 
 
